apps/kaoto/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaoto
  namespace: kaoto
  labels:
    app: kaoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaoto
  template:
    metadata:
      labels:
        app: kaoto
    spec:
      containers:
        - name: kaoto
          image: quay.io/kaotoio/kaoto-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
