apps/kaoto/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaoto
  namespace: kaoto
  labels:
    app: kaoto
spec:
  selector:
    app: kaoto
  ports:
    - name: http
      port: 8080
      targetPort: 8080
