apps/kaoto/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kaoto
  namespace: kaoto
  labels:
    app: kaoto
spec:
  to:
    kind: Service
    name: kaoto
  port:
    targetPort: http
  tls:
    termination: edge
